# seapopym-optimization

./: .gitignore  .ruff.toml  ARCHITECTURE_DESIGN.md  CLAUDE.md  CONTRIBUTORS.md  MIGRATION_STATUS.md  Makefile  README.md  REFACTORING_PLAN.md  impact_analysis_xarray.py  prototype_xarray_logbook.py  pyproject.toml  test.ipynb  test_seasonality.ipynb  xarray_prototype_simple.py
docs/: requirements.txt
docs/notebooks/: complexe_example.ipynb  example_dask_distribution.ipynb  resumable_optimization_example.ipynb  simple_example.ipynb  spatial_optimization_example.ipynb
docs/source/: conf.py  examples.rst  index.rst  modules.rst  seapopym_optimization.algorithm.genetic_algorithm.rst  seapopym_optimization.algorithm.rst  seapopym_optimization.configuration_generator.rst  seapopym_optimization.constraint.rst  seapopym_optimization.cost_function.rst  seapopym_optimization.functional_group.rst  seapopym_optimization.genetic_algorithm.rst  seapopym_optimization.model_generator.rst  seapopym_optimization.observations.rst  seapopym_optimization.rst  seapopym_optimization.viewer.rst
examples/: __init__.py  simple_optimization.py
opti_codes/Notebooks/: pteropods_papa.ipynb
opti_codes/Scripts/: pteropods_papa.py
opti_codes/run/: opti_job.slurm
seapopym_optimization/: __init__.py  constraint.py  cost_function.py  functional_groups.py  genetic_algorithm.py  protocols.py  taylor_diagram.py  viewer.py  wrapper.py
seapopym_optimization/algorithm/: __init__.py
test/: cost_function copy.ipynb  cost_function.ipynb  cost_function_multi_layer.ipynb  genetic_algorithm_single_station.ipynb  test.ipynb  test_acidity.ipynb  test_aggregate_biomass_by_layer.py  test_gam.ipynb  wrapper.ipynb
(+53 files in other folders)
