[tool.poetry]
name = "seapopym-optimisation"
version = "0.1.0"
description = ""
authors = ["Jules Lehodey <juleslehodey31320@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
seapopym = "^0.0.1.3.1"
deap = "^1.4.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
