[tool.poetry]
name = "seapopym_optimization"
version = "0.1.0"
description = ""
authors = ["Jules Lehodey <juleslehodey31320@hotmail.fr>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
seapopym = "^0.0.1.3.1"
deap = "^1.4.1"
ipykernel = "^6.29.4"
plotly = "^5.22.0"
nbformat = "^5.10.4"
ruff = "^0.4.10"
dask = "^2024.7.0"
distributed = "^2024.7.0"
cloudpickle = "^3.0.0"
scipy = "^1.14.0"
seaborn = "^0.13.2"
salib = "^1.5.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
