[project]
name = "seapopym_optimization"
description = "A Python package for optimizing SeapoPym models using DEAP and Dask"
dynamic = ["version"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jules Lehodey", email = "lehodey.jules+seapopym@gmail.com" },
]
keywords = ["oceanography", "marine ecosystems", "marine biology"]
classifiers = ["Topic :: Scientific/Engineering :: Oceanography"]

dependencies = ["seapopym", "deap", "dask", "distributed", "pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "0.0.2.1"
